Update to 1.19
-- BiomeLoadingEvent still needs to be replaced with Biome Modifiers
- Update Gradle Wrapper
- Update Apache HTTP Fluent API
- Update copyright year in LICENSE.txt
- Update Minecraft version in README.md
- Temporarily disable Waila (Jade) dependency and compatibility code
- Replace Biome Dictionary with Biome Tags
- Remove DeferredVanillaRegister and VanillaRegistryObject
- Replace IForgeRegistryEntry#getRegistryEntry with IForgeRegistry#getKey/RegistryUtil.getKey
- Update TestMod3WorldgenRegistryDumpReport with changes from Vanilla class
- Update ArgumentType registration to use DeferredRegister
- Update BannerFeature/BannerFeatureConfig to use BannerPattern registry